[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Blood.gd" type="Script" id=1]
[ext_resource path="res://assets/Effect/Blood/Blood03.png" type="Texture" id=2]
[ext_resource path="res://assets/Effect/Blood/Blood02.png" type="Texture" id=3]
[ext_resource path="res://assets/Effect/Blood/Blood04.png" type="Texture" id=4]
[ext_resource path="res://assets/Effect/Blood/Blood01.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Bloody" type="Node2D"]
script = ExtResource( 1 )

[node name="Main" type="AnimatedSprite" parent="."]
light_mask = 902001
position = Vector2( -19.4793, 0.293598 )
scale = Vector2( -0.181678, 0.263796 )
z_index = 1
frames = SubResource( 1 )
frame = 1

[node name="Back1" type="AnimatedSprite" parent="."]
light_mask = 902001
position = Vector2( 26.2916, -23.1905 )
rotation = -0.559254
scale = Vector2( 0.129048, -0.141984 )
z_index = 1
frames = SubResource( 1 )
frame = 1

[node name="Back2" type="AnimatedSprite" parent="."]
light_mask = 902001
position = Vector2( 46.5657, -2.80829 )
rotation = -3.11514
scale = Vector2( -0.12, -0.15 )
z_index = 1
frames = SubResource( 1 )
frame = 1

[node name="Back3" type="AnimatedSprite" parent="."]
light_mask = 902001
position = Vector2( 28.2396, 21.2906 )
rotation = -2.60642
scale = Vector2( -0.12, -0.14 )
z_index = 1
frames = SubResource( 1 )
frame = 1
[connection signal="animation_finished" from="Main" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Back1" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Back2" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Back3" to="." method="_on_AnimatedSprite_animation_finished"]
